--- a/test.html
+++ b/test.html
@@ -1,3 +1,13 @@
-<h1>hey baskndsldn</h1>
-<p>Hey. I am a paragraph element</p>
-<a href="https://google.com" target="_blank" title="Let's go">Click me!</a>
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Test Page</title>
+</head>
+<body></body>	
+	<h1>hey baskndsldn</h1>
+	<p>Hey. I am a <b>paragraph</b> element</p>
+	<a href="https://google.com" target="_blank" title="Let's go">Click me!</a>
+	<p>My name is: <br> Citty Cat</p>
+	<img src="https://media.os.fressnapf.com/cms/2020/07/ratgeber_hund_rasse_portraits_australian_cattle_dog_1200x527.jpg?t=cmsimg_920&f=webp">
+</body>	
+</html>
