--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 	<title>Test Page</title>
 </head>
 <body></body>	
-	<h1>This is the fat Header</h1>
+	<h1>This is the fatting Header</h1>
 	<p>Hey. I am a <b>paragraph</b> element</p>
 	<a href="https://google.com" target="_blank" title="Let's go">Click me!</a>
 	<p>My name is: <br> Citty Cat</p>
